--- a/Screens/CampoMinado/campoMinado.html
+++ b/Screens/CampoMinado/campoMinado.html
@@ -62,9 +62,9 @@
                   <div class="itemHeaderJogo">
                      <h4>Dimensões:</h4>
                      <div class="textBoxOrange">
-                        <input class="hudInput" type="number" id="dimensao1" name="dimensao1">
+                        <input class="hudInput" type="number" id="dimensao1" name="dimensao1" onkeydown="return false">
                         <p id="x" > X </p>
-                        <input class="hudInput" type="number" id="dimensao2" name="dimensao2">
+                        <input class="hudInput" type="number" id="dimensao2" name="dimensao2" onkeydown="return false">
                      </div>
                   </div>
                   <div class="itemHeaderJogo">
