Cadastros persistentes e Login/Separação de arquivos

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
                 <p><br><br></p>
 
-            <a class="button" onclick="realizarLogin()" ><p>Entrar no Jogo</p></a>
+            <a class="button" onclick="logar()" ><p>Entrar no Jogo</p></a>
                 
                 <p><br><br><br><br></p>
 
@@ -78,6 +78,6 @@
             </form>
         </div>
     </div>
-    <script src="scripts.js"></script> 
+    <script type="module" src="scripts.js"></script> 
   </body>
 </html>
