--- a/index.html
+++ b/index.html
@@ -35,14 +35,13 @@
 
                 <p><br><br></p>
 
-            <a class="button" onclick="logar()" ><p>Entrar no Jogo</p></a>
+            <a class="button" id="entrar"><p>Entrar no Jogo</p></a>
                 
                 <p><br><br><br><br></p>
 
-                <p>Ainda não possui conta? <a onclick="trocarTela()">Crie uma agora.</a></p>
+                <p>Ainda não possui conta? <a id="trocaTela">Crie uma agora.</a></p>
 
             </form>
-
         </div>
 
         <div class="login" id="cadastrar">
@@ -69,15 +68,15 @@
                 <input type="password" class="text" placeholder="Confirme sua Senha" id="confirmarSenha"/>
                 <p><br></p>
 
-                <a class="button" onclick="criarConta();"><p>Criar minha conta</p></a>
+                <a class="button" id="cadastro"><p>Criar minha conta</p></a>
 
                 <p><br></p>
 
-                <p>Já possui uma conta? <a onclick="trocarTela()">Faça login agora.</a></p>
+                <p>Já possui uma conta? <a id="trocaTela">Faça login agora.</a></p>
 
             </form>
         </div>
     </div>
-    <script type="module" src="scripts.js"></script> 
+    <script type="module" src="autentificacao.js"></script> 
   </body>
 </html>
