bugfix da restrição de integridade da tabela usuario ao realizar um cadastro

--- a/index.html
+++ b/index.html
@@ -77,6 +77,6 @@
             </form>
         </div>
     </div>
-    <script type="module" src="autentificacao.js"></script> 
+    <script type="module" src="./scripts/autentificacao.js"></script> 
   </body>
 </html>
