--- a/index.html
+++ b/index.html
@@ -50,22 +50,22 @@
             <p class="sub">Torne-se um dos maiores jogadores de Campo Minado da Unicamp</p>
             <p><br><br></p>
 
-            <form>
-                <input type="text" class="text"  placeholder="Nome Completo" id="nome"/>
+            <form name="formCad">
+                <input type="text" class="text"  placeholder="Nome Completo" id="nome" alt="Nome"/>
                 <p><br></p>
-                <input type="text" class="text" placeholder="CPF (Apenas Dígitos)" id="cpf"/>
+                <input type="text" class="text" placeholder="CPF (Apenas Dígitos)" id="cpf" alt="CPF" name="cpf"/>
                 <p><br></p>
-                <input type="text" class="text"  placeholder="Data de Nascimento (dd/mm/yyyy)" id="dataNasc"/>
+                <input type="text" class="text"  placeholder="Data de Nascimento (dd/mm/yyyy)" id="dataNasc" alt="Data Nascimento" name="dataNasc"/>
                 <p><br></p>
-                <input type="text" class="text"  placeholder="Telefone" id="telefone"/>
+                <input type="text" class="text"  placeholder="Telefone" id="telefone" alt="Telefone"/>
                 <p><br></p>
-                <input type="text" class="text"  placeholder="Email" id="email" />
+                <input type="text" class="text"  placeholder="Email" id="email" alt="Email"/>
                 <p><br></p>
-                <input type="text" class="text"  placeholder="Usuário" id="usuario"/>
+                <input type="text" class="text"  placeholder="Usuário" id="usuario" alt="Username"/>
                 <p><br></p>
-                <input type="password" class="text"  placeholder="Senha" id="senha"/>
+                <input type="password" class="text"  placeholder="Senha" id="senha" alt="Senha" name="senha"/>
                 <p><br></p>
-                <input type="password" class="text" placeholder="Confirme sua Senha" id="confirmarSenha"/>
+                <input type="password" class="text" placeholder="Confirme sua Senha" id="confirmarSenha" alt="Confirmar Senha" name="confirmaSenha"/>
                 <p><br></p>
 
                 <a class="button" id="cadastro"><p>Criar minha conta</p></a>
