--- a/index.html
+++ b/index.html
@@ -50,22 +50,47 @@
             <p class="sub">Torne-se um dos maiores jogadores de Campo Minado da Unicamp</p>
             <p><br><br></p>
 
-            <form name="formCad">
+            <form name="formCad" id="formCadastro">
+
+                <div class="form-control">
+                <small>Error message</small>
                 <input type="text" class="text"  placeholder="Nome Completo" id="nome" alt="Nome"/>
+                </div>
                 <p><br></p>
+                <div class="form-control">
+                <small>Error message</small>
                 <input type="text" class="text" placeholder="CPF (Apenas Dígitos)" id="cpf" alt="CPF" name="cpf"/>
+                </div>
                 <p><br></p>
+                <div class="form-control">
+                <small>Error message</small>
                 <input type="text" class="text"  placeholder="Data de Nascimento (dd/mm/yyyy)" id="dataNasc" alt="Data Nascimento" name="dataNasc"/>
+                </div>
                 <p><br></p>
+                <div class="form-control">
+                <small>Error message</small>
                 <input type="text" class="text"  placeholder="Telefone" id="telefone" alt="Telefone"/>
+                </div>
                 <p><br></p>
+                <div class="form-control">
+                <small>Error message</small>
                 <input type="text" class="text"  placeholder="Email" id="email" alt="Email"/>
+                </div>
                 <p><br></p>
+                <div class="form-control">
+                <small>Error message</small>
                 <input type="text" class="text"  placeholder="Usuário" id="usuario" alt="Username"/>
+                </div>
                 <p><br></p>
+                <div class="form-control">
+                <small>Error message</small>
                 <input type="password" class="text"  placeholder="Senha" id="senha" alt="Senha" name="senha"/>
+                </div>
                 <p><br></p>
+                <div class="form-control">
+                <small>Error message</small>
                 <input type="password" class="text" placeholder="Confirme sua Senha" id="confirmarSenha" alt="Confirmar Senha" name="confirmaSenha"/>
+                </div>
                 <p><br></p>
 
                 <a class="button" id="cadastro"><p>Criar minha conta</p></a>
